--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -13,4 +13,4 @@
     command : sudo systemctl start docker
 
   - name: Deploy Docker Container
-    command: docker run -itd -p 8084:8081 sony98/BankingFinance:1
+    command: docker run -itd -p 8084:8081 sony98/bankingfinance:1
